# k4FWCore

./: .clang-format  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  CMakeLists.txt  README.md  delphesinit.sh  init.sh
FWCore/: CMakeLists.txt
FWCore/scripts/: k4-print-joboptions  k4run
FWCore/src/components/: FWFloatProducer.cpp  FWFloatProducer.h  K4DataSvc.h  PodioOutput.cpp
Sim/SimDelphes/: CMakeLists.txt
Sim/SimDelphes/SimDelphes/: IDelphesSaveOutputTool.h
Sim/SimDelphes/data/: FCChh_DelphesCard_Baseline_v01.tcl
Sim/SimDelphes/options/: PythiaDelphes_config.py
Sim/SimDelphes/src/: DelphesSimulation.cpp  DelphesSimulation.h  DelphesUtils.h
TestFWCore/: CMakeLists.txt
TestFWCore/options/: createExampleEventData.py
TestFWCore/src/components/: CreateExampleEventData.cpp  CreateExampleEventData.h
k4FWCore/: CMakeLists.txt
k4FWCore/components/: CollConcat.cpp  CollectionFromObjectSvc.cpp  CollectionFromObjectSvc.h  CollectionMerger.cpp  EfficiencyFilter.cpp  EventCounter.cpp  EventHeaderCreator.cpp  EventHeaderCreator.h  EventHeaderFiller.cpp  EventHeaderFiller.h  FCCDataSvc.cpp  FCCDataSvc.h  IIOSvc.h  IMetadataSvc.h  IOSvc.cpp  IOSvc.h  MetadataSvc.cpp  MetadataSvc.h  OverlayTiming.cpp  OverlayTiming.h  PodioInput.cpp  PodioInput.h  PodioLegacyInput.cpp  PodioLegacyInput.h  PodioLegacyOutput.cpp  PodioLegacyOutput.h  PodioOutput.cpp  PodioOutput.h  Reader.cpp  SaveFile.cpp  UniqueIDGenSvc.cpp  UniqueIDGenSvc.h  Writer.cpp  k4DataSvc.cpp  k4DataSvc.h  k4LegacyDataSvc.cpp  k4LegacyDataSvc.h  k4TestFloatProducer.cpp  k4TestFloatProducer.h  rootUtils.h
k4FWCore/helpers/: AGENT.md  AGENT_USAGE.md  README.md  gaudiGen.py  gaudi_gen.py  generateFunctional
k4FWCore/helpers/tests/: CMakeLists.txt  README.md  _test_common.sh  run_all_tests.sh  test_consumer.sh  test_event_context.sh  test_filter.sh  test_gaudi_framework.sh  test_multitransformer.sh  test_producer.sh  test_runtime_consumer.sh  test_runtime_transformer.sh  test_transformer.sh
k4FWCore/include/k4FWCore/: BaseClass.h  Consumer.h  DataHandle.h  DataWrapper.h  FilterPredicate.h  FunctionalUtils.h  FunctionalUtils.ixx  ICollectionFromObjectSvc.h  IMetadataSvc.h  IUniqueIDGenSvc.h  KeepDropSwitch.h  MetaDataHandle.h  MetadataUtils.h  MetadataUtils.ixx  NewConsumer.h  OldConsumer.h  PodioDataSvc.h  PodioLegacyDataSvc.h  Producer.h  Transformer.h  TupleWriter.h  UniqueIDGenSvc.h  k4DataSvc.h  k4_check.h
k4FWCore/k4FWCore/: DataHandle.h
k4FWCore/python/k4FWCore/: parseArgs.py  utils.py
k4FWCore/scripts/: k4-print-joboptions  k4run
k4FWCore/src/: ConstPileUp.h  FWFloatProducer.cpp  FWFloatProducer.h  K4DataSvc.cpp  K4DataSvc.h  KeepDropSwitch.cpp  PileupOverlayAlg.h  PodioDataSvc.cpp  PodioInput.cpp  PodioLegacyDataSvc.cpp  PodioOutput.cpp  PodioOutput.h  PoissonPileUp.h  RangePileUp.h  UniqueIDGenSvc.cpp  k4DataSvc.cpp  k4TestFloatProducer.cpp  k4TestFloatProducer.h
k4FWCore/test/options/: simple_write.py
k4Interface/: CMakeLists.txt
k4Interface/include/k4Interface/: ICalibrateCaloHitsTool.h  ICaloCreateMap.h  ICaloIndexer.h  ICaloReadCellNoiseMap.h  ICaloReadCrosstalkMap.h  ICaloReadNeighboursMap.h  ICalorimeterTool.h  ICellPositionsTool.h  IGeoSvc.h  INoiseCaloCellsTool.h  INoiseConstTool.h  ISimG4ActionTool.h  ISimG4DetectorConstruction.h  ISimG4EventProviderTool.h  ISimG4GflashTool.h  ISimG4MagneticFieldTool.h  ISimG4ParticleSmearTool.h  ISimG4PhysicsList.h  ISimG4RegionTool.h  ISimG4SaveOutputTool.h  ISimG4Svc.h  ITestDD4hepSvc.h  ITopoClusterInputTool.h  ITowerTool.h  ITowerToolThetaModule.h  IUniqueIDGenSvc.h
test/downstream-project-cmake-test/: CMakeLists.txt  main.cxx
test/k4FWCoreTest/: CMakeLists.txt
test/k4FWCoreTest/options/: AvalancheSchedulerSimpleTest.py  CheckOutputFiles.py  ExampleEfficiencyFilter.py  ExampleFailingSingleEvent.py  ExampleFunctionalCollectionMerger.py  ExampleFunctionalConsumerInputOutputLocations.py  ExampleFunctionalConsumerMemory.py  ExampleFunctionalConsumerMultipleMemory.py  ExampleFunctionalConsumerRuntimeCollections.py  ExampleFunctionalConsumerRuntimeCollectionsMultiple.py  ExampleFunctionalFile.py  ExampleFunctionalFileMultiple.py  ExampleFunctionalFilterFile.py  ExampleFunctionalMTFile.py  ExampleFunctionalMTMemory.py  ExampleFunctionalMemory.py  ExampleFunctionalMetadata.py  ExampleFunctionalMetadataEventLoop.py  ExampleFunctionalMetadataOldAlgorithm.py  ExampleFunctionalMetadataRead.py  ExampleFunctionalMetadataReadOldAlgorithm.py  ExampleFunctionalMultiTransformerInputOutputLocations.py  ExampleFunctionalMultipleMemory.py  ExampleFunctionalNoFile.py  ExampleFunctionalNonExistingFile.py  ExampleFunctionalOutputCommands.py  ExampleFunctionalProducer.py  ExampleFunctionalProducerAbsolutePath.py  ExampleFunctionalProducerHist.py  ExampleFunctionalProducerMultiple.py  ExampleFunctionalProducerRNTuple.py  ExampleFunctionalProducerRuntimeCollections.py  ExampleFunctionalReadNthEvent.py  ExampleFunctionalSeveralInputFiles.py  ExampleFunctionalTTreeToRNTuple.py  ExampleFunctionalTransformerHist.py  ExampleFunctionalTransformerInputOutputLocations.py  ExampleFunctionalTransformerRuntimeCollections.py  ExampleFunctionalTransformerRuntimeCollectionsMultiple.py  ExampleFunctionalTransformerRuntimeEmpty.py  (+61 more)
test/k4FWCoreTest/scripts/: CheckOutputFiles.py  check_KeepDropSwitch.py  check_TestAlgorithmWithTFile_framework_nonempty.py  check_TestAlgorithmWithTFile_myTFile_nonempty.py
test/k4FWCoreTest/src/: check_ParticleIDOutputs.cpp
test/k4FWCoreTest/src/components/: ExampleEventHeaderCheck.cpp  ExampleEventHeaderConsumer.cpp  ExampleFailingConsumer.cpp  ExampleFunctionalConsumer.cpp  ExampleFunctionalConsumerEventContext.cpp  ExampleFunctionalConsumerKeyValues.cpp  (+61 more)
test/k4TestFWCore/: CMakeLists.txt
test/k4TestFWCore/options/: TestAlgorithmWithTFile.py  TwoProducers.py  createExampleEventData.py  createHelloWorld.py  eventcounter.py  readExampleEventData.py  testAlgorithmWithTFile.py
test/k4TestFWCore/scripts/: check_TestAlgorithmWithTFile_framework_nonempty.py  check_TestAlgorithmWithTFile_myTFile_nonempty.py
(+37 files in other folders)
